# production-workshop-model

./: .gitignore  CMakeLists.txt  README.md  main.cpp
DomainEntities/: Event.h  Machine.h  Product.h
Parsing/: InputParser.cpp  InputParser.h
Simulation/: Simulator.cpp  Simulator.h
common/: Config.h  constants.h  types.h
domainEntities/: Event.h  Machine.cpp  Machine.h  Product.cpp  Product.h
parsing/: Config.h  InputParser.cpp  InputParser.h  validationUtils.cpp  validationUtils.h
simulation/: Simulator.cpp  Simulator.h
